grammars/.antlr/qParser.java
// Generated from /Users/pcarneiro/Repos/kx-vscode/grammars/q.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class qParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, T__110=111, T__111=112, T__112=113, 
		T__113=114, T__114=115, T__115=116, T__116=117, T__117=118, T__118=119, 
		T__119=120, T__120=121, T__121=122, T__122=123, T__123=124, T__124=125, 
		T__125=126, T__126=127, T__127=128, T__128=129, T__129=130, T__130=131, 
		T__131=132, T__132=133, T__133=134, T__134=135, T__135=136, T__136=137, 
		T__137=138, T__138=139, T__139=140, T__140=141, T__141=142, T__142=143, 
		T__143=144, T__144=145, T__145=146, T__146=147, T__147=148, T__148=149, 
		PLUS=150, MINUS=151, MULTIPLY=152, DIVIDE=153, EQUALS=154, NOT_EQUALS=155, 
		LESS_THAN=156, LESS_THAN_OR_EQUAL=157, GREATER_THAN=158, GREATER_THAN_OR_EQUAL=159, 
		AND=160, OR=161, NOT=162, INT=163, LONG=164, FLOAT=165, DOUBLE=166, CHAR=167, 
		SYMBOL=168, TIMESTAMP=169, ID=170, DIGIT=171, NUMBER=172, STRING=173, 
		ESC=174, WS=175;
	public static final int
		RULE_variable_declaration = 0, RULE_storage_type = 1, RULE_variable_name = 2, 
		RULE_expression = 3, RULE_or_expression = 4, RULE_and_expression = 5, 
		RULE_comparison_expression = 6, RULE_additive_expression = 7, RULE_multiplicative_expression = 8, 
		RULE_unary_expression = 9, RULE_primary_expression = 10, RULE_abs_function = 11, 
		RULE_acos_function = 12, RULE_all_function = 13, RULE_and_function = 14, 
		RULE_any_function = 15, RULE_asin_function = 16, RULE_atan_function = 17, 
		RULE_avg_function = 18, RULE_ceiling_function = 19, RULE_cos_function = 20, 
		RULE_count_function = 21, RULE_cross_function = 22, RULE_delete_function = 23, 
		RULE_deltas_function = 24, RULE_dev_function = 25, RULE_distinct_function = 26, 
		RULE_div_function = 27, RULE_drop_function = 28, RULE_each_function = 29, 
		RULE_enlist_function = 30, RULE_eval_function = 31, RULE_except_function = 32, 
		RULE_exec_function = 33, RULE_exp_function = 34, RULE_fby_function = 35, 
		RULE_fill_function = 36, RULE_first_function = 37, RULE_flip_function = 38, 
		RULE_floor_function = 39, RULE_get_function = 40, RULE_group_function = 41, 
		RULE_gtime_function = 42, RULE_hclose_function = 43, RULE_hcount_function = 44, 
		RULE_hdel_function = 45, RULE_hopen_function = 46, RULE_hsym_function = 47, 
		RULE_iasc_function = 48, RULE_idesc_function = 49, RULE_ij_function = 50, 
		RULE_in_function = 51, RULE_insert_function = 52, RULE_inter_function = 53, 
		RULE_inv_function = 54, RULE_keys_function = 55, RULE_last_function = 56, 
		RULE_like_function = 57, RULE_list_function = 58, RULE_lj_function = 59, 
		RULE_load_function = 60, RULE_log_function = 61, RULE_lower_function = 62, 
		RULE_lsq_function = 63, RULE_ltime_function = 64, RULE_ltrim_function = 65, 
		RULE_mavg_function = 66, RULE_max_function = 67, RULE_maxs_function = 68, 
		RULE_mcount_function = 69, RULE_md5_function = 70, RULE_mdev_function = 71, 
		RULE_med_function = 72, RULE_meta_function = 73, RULE_min_function = 74, 
		RULE_mins_function = 75, RULE_mmax_function = 76, RULE_mmin_function = 77, 
		RULE_mmu_function = 78, RULE_mod_function = 79, RULE_msum_function = 80, 
		RULE_neg_function = 81, RULE_next_function = 82, RULE_not_function = 83, 
		RULE_null_function = 84, RULE_or_function = 85, RULE_over_function = 86, 
		RULE_parse_function = 87, RULE_peach_function = 88, RULE_pj_function = 89, 
		RULE_plist_function = 90, RULE_prd_function = 91, RULE_prev_function = 92, 
		RULE_prior_function = 93, RULE_rand_function = 94, RULE_rank_function = 95, 
		RULE_ratios_function = 96, RULE_raze_function = 97, RULE_read0_function = 98, 
		RULE_read1_function = 99, RULE_reciprocal_function = 100, RULE_reverse_function = 101, 
		RULE_rload_function = 102, RULE_rotate_function = 103, RULE_rsave_function = 104, 
		RULE_rtrim_function = 105, RULE_save_function = 106, RULE_scan_function = 107, 
		RULE_select_function = 108, RULE_set_function = 109, RULE_show_function = 110, 
		RULE_signum_function = 111, RULE_sin_function = 112, RULE_sqrt_function = 113, 
		RULE_ssr_function = 114, RULE_string_function = 115, RULE_sublist_function = 116, 
		RULE_sum_function = 117, RULE_sums_function = 118, RULE_sv_function = 119, 
		RULE_system_function = 120, RULE_tables_function = 121, RULE_tan_function = 122, 
		RULE_til_function = 123, RULE_trim_function = 124, RULE_type_function = 125, 
		RULE_uj_function = 126, RULE_ungroup_function = 127, RULE_union_function = 128, 
		RULE_update_function = 129, RULE_upper_function = 130, RULE_upsert_function = 131, 
		RULE_value_function = 132, RULE_var_function = 133, RULE_view_function = 134, 
		RULE_vs_function = 135, RULE_wavg_function = 136, RULE_where_function = 137, 
		RULE_within_function = 138, RULE_wj1_function = 139, RULE_wj2_function = 140, 
		RULE_ww_function = 141, RULE_xasc_function = 142, RULE_xbar_function = 143, 
		RULE_xcols_function = 144, RULE_xdesc_function = 145, RULE_xexp_function = 146, 
		RULE_xgroup_function = 147, RULE_xkey_function = 148, RULE_xlog_function = 149, 
		RULE_xprev_function = 150, RULE_xrank_function = 151, RULE_xranked_function = 152, 
		RULE_xrecs_function = 153, RULE_xrows_function = 154, RULE_xss_function = 155, 
		RULE_xtype_function = 156, RULE_yield_function = 157, RULE_zip_function = 158;
	private static String[] makeRuleNames() {
		return new String[] {
			"variable_declaration", "storage_type", "variable_name", "expression", 
			"or_expression", "and_expression", "comparison_expression", "additive_expression", 
			"multiplicative_expression", "unary_expression", "primary_expression", 
			"abs_function", "acos_function", "all_function", "and_function", "any_function", 
			"asin_function", "atan_function", "avg_function", "ceiling_function", 
			"cos_function", "count_function", "cross_function", "delete_function", 
			"deltas_function", "dev_function", "distinct_function", "div_function", 
			"drop_function", "each_function", "enlist_function", "eval_function", 
			"except_function", "exec_function", "exp_function", "fby_function", "fill_function", 
			"first_function", "flip_function", "floor_function", "get_function", 
			"group_function", "gtime_function", "hclose_function", "hcount_function", 
			"hdel_function", "hopen_function", "hsym_function", "iasc_function", 
			"idesc_function", "ij_function", "in_function", "insert_function", "inter_function", 
			"inv_function", "keys_function", "last_function", "like_function", "list_function", 
			"lj_function", "load_function", "log_function", "lower_function", "lsq_function", 
			"ltime_function", "ltrim_function", "mavg_function", "max_function", 
			"maxs_function", "mcount_function", "md5_function", "mdev_function", 
			"med_function", "meta_function", "min_function", "mins_function", "mmax_function", 
			"mmin_function", "mmu_function", "mod_function", "msum_function", "neg_function", 
			"next_function", "not_function", "null_function", "or_function", "over_function", 
			"parse_function", "peach_function", "pj_function", "plist_function", 
			"prd_function", "prev_function", "prior_function", "rand_function", "rank_function", 
			"ratios_function", "raze_function", "read0_function", "read1_function", 
			"reciprocal_function", "reverse_function", "rload_function", "rotate_function", 
			"rsave_function", "rtrim_function", "save_function", "scan_function", 
			"select_function", "set_function", "show_function", "signum_function", 
			"sin_function", "sqrt_function", "ssr_function", "string_function", "sublist_function", 
			"sum_function", "sums_function", "sv_function", "system_function", "tables_function", 
			"tan_function", "til_function", "trim_function", "type_function", "uj_function", 
			"ungroup_function", "union_function", "update_function", "upper_function", 
			"upsert_function", "value_function", "var_function", "view_function", 
			"vs_function", "wavg_function", "where_function", "within_function", 
			"wj1_function", "wj2_function", "ww_function", "xasc_function", "xbar_function", 
			"xcols_function", "xdesc_function", "xexp_function", "xgroup_function", 
			"xkey_function", "xlog_function", "xprev_function", "xrank_function", 
			"xranked_function", "xrecs_function", "xrows_function", "xss_function", 
			"xtype_function", "yield_function", "zip_function"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'('", "')'", "'abs'", "'acos'", "'all'", "'any'", "'asin'", 
			"'atan'", "'avg'", "'ceiling'", "'cos'", "'count'", "'cross'", "','", 
			"'delete'", "'deltas'", "'dev'", "'distinct'", "'div'", "'drop'", "'each'", 
			"'enlist'", "'eval'", "'except'", "'exec'", "'exp'", "'fby'", "'fill'", 
			"'first'", "'flip'", "'floor'", "'get'", "'group'", "'gtime'", "'hclose'", 
			"'hcount'", "'hdel'", "'hopen'", "'hsym'", "'iasc'", "'idesc'", "'ij'", 
			"'in'", "'insert'", "'inter'", "'inv'", "'keys'", "'last'", "'like'", 
			"'list'", "'lj'", "'load'", "'log'", "'lower'", "'lsq'", "'ltime'", "'ltrim'", 
			"'mavg'", "'max'", "'maxs'", "'mcount'", "'md5'", "'mdev'", "'med'", 
			"'meta'", "'min'", "'mins'", "'mmax'", "'mmin'", "'mmu'", "'mod'", "'msum'", 
			"'neg'", "'next'", "'null'", "'over'", "'parse'", "'peach'", "'pj'", 
			"'plist'", "'prd'", "'prev'", "'prior'", "'rand'", "'rank'", "'ratios'", 
			"'raze'", "'read0'", "'read1'", "'reciprocal'", "'reverse'", "'rload'", 
			"'rotate'", "'rsave'", "'rtrim'", "'save'", "'scan'", "'select'", "'set'", 
			"'show'", "'signum'", "'sin'", "'sqrt'", "'ssr'", "'string'", "'sublist'", 
			"'sum'", "'sums'", "'sv'", "'system'", "'tables'", "'tan'", "'til'", 
			"'trim'", "'type'", "'uj'", "'ungroup'", "'union'", "'update'", "'upper'", 
			"'upsert'", "'value'", "'var'", "'view'", "'vs'", "'wavg'", "'where'", 
			"'within'", "'wj1'", "'wj2'", "'ww'", "'xasc'", "'xbar'", "'xcols'", 
			"'xdesc'", "'xexp'", "'xgroup'", "'xkey'", "'xlog'", "'xprev'", "'xrank'", 
			"'xranked'", "'xrecs'", "'xrows'", "'xss'", "'xtype'", "'yield'", "'zip'", 
			"'+'", "'-'", "'*'", "'%'", "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", 
			"'and'", "'or'", "'not'", "'int'", "'long'", "'float'", "'double'", "'char'", 
			"'symbol'", "'timestamp'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
			"EQUALS", "NOT_EQUALS", "LESS_THAN", "LESS_THAN_OR_EQUAL", "GREATER_THAN", 
			"GREATER_THAN_OR_EQUAL", "AND", "OR", "NOT", "INT", "LONG", "FLOAT", 
			"DOUBLE", "CHAR", "SYMBOL", "TIMESTAMP", "ID", "DIGIT", "NUMBER", "STRING", 
			"ESC", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "q.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public qParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Variable_declarationContext extends ParserRuleContext {
		public Storage_typeContext storage_type() {
			return getRuleContext(Storage_typeContext.class,0);
		}
		public Variable_nameContext variable_name() {
			return getRuleContext(Variable_nameContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(qParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
	}

	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_variable_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(318);
			storage_type();
			setState(319);
			variable_name();
			setState(320);
			match(EQUALS);
			setState(321);
			expression();
			setState(322);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Storage_typeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(qParser.INT, 0); }
		public TerminalNode LONG() { return getToken(qParser.LONG, 0); }
		public TerminalNode FLOAT() { return getToken(qParser.FLOAT, 0); }
		public TerminalNode DOUBLE() { return getToken(qParser.DOUBLE, 0); }
		public TerminalNode CHAR() { return getToken(qParser.CHAR, 0); }
		public TerminalNode SYMBOL() { return getToken(qParser.SYMBOL, 0); }
		public TerminalNode TIMESTAMP() { return getToken(qParser.TIMESTAMP, 0); }
		public Storage_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_storage_type; }
	}

	public final Storage_typeContext storage_type() throws RecognitionException {
		Storage_typeContext _localctx = new Storage_typeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_storage_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(324);
			_la = _input.LA(1);
			if ( !(((((_la - 163)) & ~0x3f) == 0 && ((1L << (_la - 163)) & ((1L << (INT - 163)) | (1L << (LONG - 163)) | (1L << (FLOAT - 163)) | (1L << (DOUBLE - 163)) | (1L << (CHAR - 163)) | (1L << (SYMBOL - 163)) | (1L << (TIMESTAMP - 163)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_nameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(qParser.ID, 0); }
		public Variable_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_name; }
	}

	public final Variable_nameContext variable_name() throws RecognitionException {
		Variable_nameContext _localctx = new Variable_nameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variable_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(326);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Or_expressionContext or_expression() {
			return getRuleContext(Or_expressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(328);
			or_expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Or_expressionContext extends ParserRuleContext {
		public List<And_expressionContext> and_expression() {
			return getRuleContexts(And_expressionContext.class);
		}
		public And_expressionContext and_expression(int i) {
			return getRuleContext(And_expressionContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(qParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(qParser.OR, i);
		}
		public Or_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_or_expression; }
	}

	public final Or_expressionContext or_expression() throws RecognitionException {
		Or_expressionContext _localctx = new Or_expressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_or_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(330);
			and_expression();
			setState(335);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(331);
				match(OR);
				setState(332);
				and_expression();
				}
				}
				setState(337);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class And_expressionContext extends ParserRuleContext {
		public List<Comparison_expressionContext> comparison_expression() {
			return getRuleContexts(Comparison_expressionContext.class);
		}
		public Comparison_expressionContext comparison_expression(int i) {
			return getRuleContext(Comparison_expressionContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(qParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(qParser.AND, i);
		}
		public And_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_and_expression; }
	}

	public final And_expressionContext and_expression() throws RecognitionException {
		And_expressionContext _localctx = new And_expressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_and_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(338);
			comparison_expression();
			setState(343);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(339);
				match(AND);
				setState(340);
				comparison_expression();
				}
				}
				setState(345);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comparison_expressionContext extends ParserRuleContext {
		public List<Additive_expressionContext> additive_expression() {
			return getRuleContexts(Additive_expressionContext.class);
		}
		public Additive_expressionContext additive_expression(int i) {
			return getRuleContext(Additive_expressionContext.class,i);
		}
		public List<TerminalNode> EQUALS() { return getTokens(qParser.EQUALS); }
		public TerminalNode EQUALS(int i) {
			return getToken(qParser.EQUALS, i);
		}
		public Comparison_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparison_expression; }
	}

	public final Comparison_expressionContext comparison_expression() throws RecognitionException {
		Comparison_expressionContext _localctx = new Comparison_expressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comparison_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(346);
			additive_expression();
			setState(351);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EQUALS) {
				{
				{
				setState(347);
				match(EQUALS);
				setState(348);
				additive_expression();
				}
				}
				setState(353);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
